[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Sam Zhou <sam@developersam.com>"]
repository = "https://github.com/SamChou19815/SamChou19815"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
strip = "symbols"
