[package]
name = "sam-cli"
version = "0.1.0"
description = "Command-line companion for Developer Sam"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "sam"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"

[lints]
workspace = true
