[package]
name = "sam-run"
version = "0.1.0"
description = "Shebang launcher that downloads and runs binaries from GitHub releases"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "sam-run"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
flate2 = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
